# robomate

./: .gitignore  README.md
backend/: .gitignore  README.md  modal_app.py  pyproject.toml
backend/backend/: __init__.py  artifacts.py  contracts.py  orchestrator.py  pinecone_client.py  supabase_api.py
backend/backend/analyzers/: __init__.py  gemini_eval.py  gemini_temporal_annotator.py  pinecone_recording_indexer.py
backend/backend/modal_inference/: __init__.py  media.py  ultralytics_results.py
backend/backend/splat/: __init__.py  camera_path.py  convert.py  dataset.py  manifest.py
backend/backend/tools/: __init__.py  e2e_upload_bundle.py
backend/tests/: test_artifacts.py  test_e2e_bundle.py  test_gemini_eval.py  test_orchestrator.py  test_orchestrator_preflight.py  test_pinecone_features.py  test_splat_dataset.py  test_splat_manifest.py  test_temporal_annotator.py
docs/superpowers/plans/: 2026-05-23-mediapipe-so101.md  2026-05-24-egocentric-so101-hand-only-teleop.md  2026-05-24-egocentric-so101-teleop.md  (+1 more)
iosApp/: .gitignore  CLAUDE.md  SupabaseConfig.example.swift  project.yml
iosApp/DataCollector/: Info.plist
playground/: .gitignore
playground/iphone_sensors/: README.md  export_nerfstudio.py  index.html  modal_nerfstudio.py  process_capture.py  pyproject.toml
playground/iphone_sensors/spark_viewer/: index.html  package.json
playground/iphone_sensors/spark_viewer/public/camera-paths/: iphone-data-2.json  iphone-data-3.json
playground/iphone_sensors/spark_viewer/public/splats/: iphone-data-2.spz
playground/iphone_sensors/spark_viewer/scripts/: convert-to-spz.js  export-camera-path.js
playground/iphone_sensors/spark_viewer/src/: main.js  styles.css
playground/iphone_sensors/tests/: test_nerfstudio_export.py  test_timeline_alignment.py
playground/mediapipe/: .gitignore  README.md  main.py  pyproject.toml
playground/mediapipe_so101/: README.md  main.py  pyproject.toml
playground/mediapipe_so101/mediapipe_so101/: __init__.py  hand_tracker.py  pose_mapper.py  robot_backend.py  safety.py  types.py
playground/mediapipe_so101/tests/: test_hand_tracker.py  test_main_loop.py  test_pose_mapper.py  test_robot_backend.py  test_safety.py
playground/modal-inference/: .gitignore  README.md  modal_app.py  pyproject.toml
playground/teleop/: .gitignore  README.md  main.py  pyproject.toml
playground/temporal_action_segmentation/: .env.example  .gitignore  README.md  pyproject.toml
playground/temporal_action_segmentation/temporal_action_segmentation/: __init__.py  cli.py  env.py  hand_tracking.py  labelers.py  models.py  pipeline.py  render.py  review.py  segmentation.py
playground/temporal_action_segmentation/tests/: test_env.py  test_segmentation.py
playground/video_eval/: .gitignore  README.md  pyproject.toml
playground/video_eval/tests/: test_evaluator.py
playground/video_eval/video_eval/: __init__.py  cli.py  evaluator.py
playground/yolo/: .gitignore  README.md  pyproject.toml  run_yolo.py
supabase/: config.toml
supabase/migrations/: 20260524000000_base_schema.sql  20260524020850_backend_analysis_pipeline.sql  20260524170000_add_depth_dimensions.sql  20260524180000_add_gaussian_splat_kind.sql  20260606000000_add_temporal_annotation_kind.sql
web/: .gitignore  DESIGN-PAGES.md  package.json  tsconfig.tsbuildinfo
web/scripts/: workspace-dev.mjs
web/src/: proxy.ts
(+110 files in other folders)
