[project]
name = "iphone-sensors-playground"
version = "0.1.0"
description = "LiDAR depth projection and sensor-fusion visualisations for iPhone captures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "modal>=1.0.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
]

[tool.uv]
python-preference = "only-system"
