[project]
name = "video-eval"
version = "0.1.0"
description = "Evaluate whether a task trajectory in a video succeeded using Gemini."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.4.0",
]

[project.scripts]
video-eval = "video_eval.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["video_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

